--- a/style.css
+++ b/style.css
@@ -9,11 +9,6 @@ body {
     margin: 0;
     padding: 0;
 }
-.container {
-    max-width: 90%; /* or a specific pixel value like 1200px */
-    margin: 0 auto; /* centers the container */
-    padding: 2% 5%; /* adds spacing inside the container */
-}
 /* Navigation Bar Styles */
 nav {
     position: fixed; /* Adjust as needed */
@@ -44,15 +39,7 @@ nav {
     padding: 20px;
 }
 
-h1 {
-    font-size: 2em; /* Adjust the size as needed */
+h1, p {
+    color: #333; /* Dark grey for readability */
 }
 
-p, a {
-    font-size: 1em; /* Standard size for body text and links */
-}
-
-/* You may want to add specific classes for navigation links if they need different styling */
-.nav-links {
-    font-size: 0.9em; /* Smaller font size for navigation links */
-}
