--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* CSS for the rainbow effect on Welcome! text */
+/* CSS for the wavy effect on Welcome! text */
 .animated-text {
     text-align: center;
     font-size: 3em;
@@ -7,7 +7,7 @@
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: wave 1s infinite;
+    animation: wave 1s infinite linear alternate;
 }
 
 @keyframes wave {
@@ -73,4 +73,3 @@ h1, p {
     border: 1px solid #ddd;
     margin-top: 2em;
 }
-
