--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: wave 1s infinite linear alternate;
+    animation: wave 0.03s infinite linear alternate;
 }
 
 @keyframes wave {
@@ -47,4 +47,36 @@ nav {
 .side-buttons li a {
     display: block;
     text-decoration: none;
+    color: black;
+    padding: 10px;
+    transition: color 0.3s ease;
+}
+
+/* Hover Effect */
+.side-buttons li a:hover {
+    color: #9bb1ff;
+}
+
+.main-content {
+    margin: 50px 150px; /* Adjusted margin for centering */
+    padding: 20px;
+    border: 2px solid black; /* Black border */
+    border-radius: 10px; /* Smoothed corners */
+}
+
+h1, p {
+    color: #333;
+}
+
+/* Center the name */
+.main-content h1 {
+    text-align: center;
+}
+
+/* Additional styles for the shipping forecast textarea */
+#shipping-forecast {
+    padding: 1em;
+    border: 1px solid #ddd;
+    margin-top: 2em;
+}
 
