--- a/style.css
+++ b/style.css
@@ -80,13 +80,10 @@ h1, p {
 }
 
 @keyframes scroll-horizontal {
-    0% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
+    from { transform: translateX(100%); }
+    to { transform: translateX(-100%); }
 }
+
 
 
 
